RESOLVED FIXED83099
WebKitTestRunner's EventSender is leaky
https://bugs.webkit.org/show_bug.cgi?id=83099
Summary WebKitTestRunner's EventSender is leaky
Simon Fraser (smfr)
Reported 2012-04-03 17:49:36 PDT
WebKitTestRunner's EventSender is leaky
Attachments
Patch (14.41 KB, patch)
2012-04-03 17:50 PDT, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2012-04-03 17:50:55 PDT
Simon Fraser (smfr)
Comment 2 2012-04-03 18:10:27 PDT
Note You need to log in before you can comment on or make changes to this bug.