WebKitTestRunner's EventSender is leaky https://bugs.webkit.org/show_bug.cgi?id=83099

Reviewed by Beth Dakin.

Fix leaks of WKNumbers by using the adoptWK idiom, and make
all the code consistent.

* WebKitTestRunner/InjectedBundle/EventSendingController.cpp:
(WTR::EventSendingController::mouseDown):
(WTR::EventSendingController::mouseUp):
(WTR::EventSendingController::mouseMoveTo):
(WTR::EventSendingController::leapForward):
(WTR::EventSendingController::keyDown):
(WTR::EventSendingController::mouseScrollBy):
(WTR::EventSendingController::addTouchPoint):
(WTR::EventSendingController::updateTouchPoint):
(WTR::EventSendingController::setTouchModifier):
(WTR::EventSendingController::releaseTouchPoint):
(WTR::EventSendingController::cancelTouchPoint):

Canonical link: https://commits.webkit.org/100462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113117 268f45cc-cd09-0410-ab3c-d52691b4dbfc